infra/k8s/marketplace-depl.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata:
  name: market-depl
spec: 
  replicas: 2
  selector:
    matchLabels:
      app: market
  template:
    metadata:
      labels: 
        app: market
    spec: 
      containers: 
        - name: market
          image: sydsfn/market 
---
apiVersion: v1 
kind: Service 
metadata:
  name: market-srv
spec: 
  selector:
    app: market  
  ports:
  - name: market    
    protocol: TCP 
    port: 3003
    targetPort: 3003
