infra/k8s/notification-depl.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata:
  name: notification-depl
spec: 
  replicas: 2
  selector:
    matchLabels:
      app: notification
  template:
    metadata:
      labels: 
        app: notification
    spec: 
      containers: 
        - name: notification
          image: sydsfn/notification 
---
apiVersion: v1 
kind: Service 
metadata:
  name: notification-srv
spec: 
  selector:
    app: notification  
  ports:
  - name: notification    
    protocol: TCP 
    port: 3008
    targetPort: 3008
