infra/k8s/post-depl.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata:
  name: post-depl
spec: 
  replicas: 2
  selector:
    matchLabels:
      app: post 
  template:
    metadata:
      labels: 
        app: post 
    spec: 
      containers: 
        - name: post 
          image: sydsfn/post  
---
apiVersion: v1 
kind: Service 
metadata:
  name: post-srv
spec: 
  selector:
    app: post  
  ports:
  - name: post    
    protocol: TCP 
    port: 3004
    targetPort: 3004
