infra/k8s/ticket-order-depl.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata:
  name: ticket-order-depl
spec: 
  replicas: 2
  selector:
    matchLabels:
      app: ticket-order 
  template:
    metadata:
      labels: 
        app: ticket-order 
    spec: 
      containers: 
        - name: ticket-order 
          image: sydsfn/ticket-order  
---
apiVersion: v1 
kind: Service 
metadata:
  name: ticket-order-srv
spec: 
  selector:
    app: ticket-order  
  ports:
  - name: ticket-order    
    protocol: TCP 
    port: 3007
    targetPort: 3007
