infra/k8s/user-auth-depl.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata:
  name: user-auth-depl
spec: 
  replicas: 2
  selector:
    matchLabels:
      app: user-auth
  template:
    metadata:
      labels: 
        app: user-auth
    spec: 
      containers: 
        - name: user-auth
          image: sydsfn/user-auth
---
apiVersion: v1 
kind: Service 
metadata:
  name: user-auth-srv
spec: 
  selector:
    app: user-auth 
  ports:
  - name: user-auth   
    protocol: TCP 
    port: 3001
    targetPort: 3001
