infra/k8s/user-depl.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata:
  name: user-service-depl
spec: 
  replicas: 2
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels: 
        app: user-service
    spec: 
      containers: 
        - name: user-service
          image: sydsfn/user-service
---
apiVersion: v1 
kind: Service 
metadata:
  name: user-service-srv
spec: 
  selector:
    app: user-service 
  ports:
  - name: user-service   
    protocol: TCP 
    port: 3002
    targetPort: 3002
